@@ -14,11 +14,11 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 2ed5e178c289277b1672f1a6947779467bfc2f43 ChangeLog
+SHA1 e90c8a60ba3bc97baf775113656f496c79cd4f4e ChangeLog
 SHA1 5437f164ae11b18bb58a8576204254a1b4a9334b LICENSE
 SHA1 003a1689432ca91c9d4d77556b871826b573fa57 MANIFEST
-SHA1 4667438b618c9d62d146c6d433e1e53db5a39f04 META.yml
-SHA1 cf5f0d7b124f2dfe0c63b3f89254e476dfc8d15a Makefile.PL
+SHA1 34de00c26db822eb7dfab0e40caa49c6045e4236 META.yml
+SHA1 128a66bb0e9d0057bcd09ae9d7e129e6e3ad2787 Makefile.PL
 SHA1 ffcc80b5c5cbb52f2c2234e9d66f9f32d63f9be7 README
 SHA1 ecb089134bba590f02aa974be5a6e86d72cdb0dc UNINSTALL_CYGWIN
 SHA1 55ad5345eebcf4f13ea67debf3995c15930e2e5b bin/fullauto.pl
@@ -34,7 +34,7 @@ SHA1 026cc0551a0ad399d195e395b46bdf842e115192 inc/Module/Install/Metadata.pm
 SHA1 d3a4c720c6ec7f8fce7df37002fbc9177fb77050 inc/Module/Install/Scripts.pm
 SHA1 5457015ea5a50e93465bf2dafa29feebd547f85b inc/Module/Install/Win32.pm
 SHA1 051e7fa8063908befa3440508d0584a2497b97db inc/Module/Install/WriteAll.pm
-SHA1 7558f1a9807b9a3845a4308649bc3172ab92db22 lib/Net/FullAuto.pm
+SHA1 7f25613a5a76e2d2b3fdbe8a64c07d9f15d213db lib/Net/FullAuto.pm
 SHA1 8a710a48bb21aa584949dbbe3649c0d5b2b084fc lib/Net/FullAuto/Custom/BackUp/README
 SHA1 b9b90c2707951d9d5753dc9ef9699abe7daddee9 lib/Net/FullAuto/Custom/README
 SHA1 3dba6317f994a5d42a6f45f959a7829aba92e242 lib/Net/FullAuto/Distro/fa_code.pm
@@ -48,7 +48,7 @@ SHA1 6fac6b17647d05b71441ac3783ceec38b9b71fa6 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.9 (Cygwin)
 
-iEYEARECAAYFAk4XviwACgkQdsVAdUjO9IkIwACfWFo96K+4JUu2bMA5blFaRxs0
-slwAnixs1A84nWI7tiiyTIbDC8p0LHHu
-=Go+0
+iEYEARECAAYFAk4YgFMACgkQdsVAdUjO9IkbgQCgik/dp33vt3VHcT/+dhxarU+K
+gwAAoI0Xn8bLip2ctevdr4NSHL1k8bMh
+=YAc1
 -----END PGP SIGNATURE-----
