@@ -54,7 +54,7 @@ package Net::FullAuto;
 ################################################################
 
 
-our $VERSION='0.9941';
+our $VERSION='0.9942';
 
 
 use 5.005;
